<resources>
    <string name="app_name">Baraati</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rs">\u20B9</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="str_password">Password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_forger_password"><u>Forgot Password?</u></string>
    <string name="str_forgot_password">Forgot Password</string>
    <string name="str_dont_have_account">Don\'t have account?</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_no_internet">Internet not available.</string>
    <string name="str_name">Name</string>
    <string name="str_groom">Groom</string>
    <string name="str_bridal">Bride</string>
    <string name="str_email_address">Email ID</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_next">Next</string>
    <string name="str_done">Done</string>
    <string name="str_already_have_an_account">Already have an account?</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_in_u"><u>Sign In</u></string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_send">Send</string>
    <string name="str_enter_code">Enter Code</string>
    <string name="str_we_have_send_confirmation">We\'ve send confirmation code to your email.\n please check your inbox</string>
    <string name="str_reset">Reset</string>
    <string name="str_resend">Resend</string>
    <string name="str_name_must">Name must not be empty.</string>
    <string name="str_email_must">Email id must not be empty.</string>
    <string name="str_password_must">Password must not be empty.</string>
    <string name="str_enter_valid_email">Enter valid email id.</string>
    <string name="str_password_should_atleast_6_character">Password must be between 6 to 15</string>
    <string name="str_new_password_should_atleast_6_character">Password must be between 6 to 15</string>
    <string name="str_conf_password_should_atleast_6_character">Password must be between 6 to 15</string>
    <string name="str_code_must">Code must not be empty.</string>
    <string name="str_reset_entered_code_is_invalid">Entered code is invalid.</string>
    <string name="str_my_orders">Orders</string>
    <string name="str_aboutus">About us</string>
    <string name="str_contactus">Contact us</string>
    <string name="str_instant_booking">Instant Booking</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_privacy_policy_u"><u>Privacy Policy</u></string>
    <string name="str_terms_of_use">Terms of use</string>
    <string name="str_choose_wedding">Choose Your Wedding</string>
    <string name="str_choose_event">Choose Your Events</string>
    <string name="str_please_select_wedding_type">Please select wedding type.</string>
    <string name="str_please_select_event_type">Please select event type to add check list.</string>
    <string name="str_things_you_need">Things You Need</string>
    <string name="str_logout">Logout</string>
    <string name="str_CheckList_added_successfully">CheckList added successfully!</string>
    <string name="str_no_checklsit">No CheckList Added</string>
    <string name="str_no_assigned_checklsit">No Assigned CheckList Added</string>
    <string name="str_url_about_us">http://iappbits.in/barati/ws_user/aboutus</string>
    <string name="str_url_contact_us">http://iappbits.in/barati/ws_user/contactus</string>
    <string name="str_url_privacy_policy">http://iappbits.in/barati/ws_user/privacy</string>
    <string name="str_url_terms_of_use">http://iappbits.in/barati/ws_user/terms</string>
    <string name="str_buy_your_things">Buy Your Things</string>
    <string name="str_bidding_pipeline">Bidding Pipeline</string>
    <string name="str_yes_caps">YES</string>
    <string name="str_no_caps">NO</string>
    <string name="str_are_you_sure_you_want_to_remove">Are you sure you want to remove %1$s? It will remove everything related %2$s.</string>
    <string name="str_set_dates">Set Date Range</string>
    <string name="str_done_caps">DONE</string>
    <string name="str_schedule_event">Schedule Event</string>
    <string name="str_from">From:</string>
    <string name="str_to">To:</string>
    <string name="str_please_set_dates">Please set dates</string>
    <string name="str_schedule">Schedule</string>
    <string name="str_on">on</string>
    <string name="str_set_reminder">Set Reminder</string>
    <string name="str_remind_me_before">Remind me before </string>
    <string name="str_vendor_list">Vendor List</string>
    <string name="str_bazaar">Bazaar</string>
    <string name="title_activity_vendor_bazaar">Vendor Bazaar Activity</string>
    <string name="str_inquiry">Inquiry</string>
    <string name="str_customer_reviews">Customer Reviews</string>
    <string name="str_customer_reviews_with_values">%1s Customer Reviews</string>
    <string name="str_out_of_5_star">%1$s out of 5 stars</string>
    <string name="str_description">Description</string>
    <string name="str_price">Price:</string>
    <string name="str_5_stars">5 Stars</string>
    <string name="str_4_stars">4 Stars</string>
    <string name="str_3_stars">3 Stars</string>
    <string name="str_2_stars">2 Stars</string>
    <string name="str_1_stars">1 Stars</string>
    <string name="str_recent_reviews">Recent Reviews</string>
    <string name="str_write_review">Write Review</string>
    <string name="str_purchase">Purchase</string>
    <string name="str_no_vendor_found">No Vendor Found!</string>
    <string name="str_no_product_found">No Product Found!</string>
    <string name="str_sent_inquiry_success">Inquiry sent successfully</string>
    <string name="str_continue">Continue</string>
    <string name="str_amount_payable">Amount Payable</string>
    <string name="str_price_detail">Price Detail</string>
    <string name="str_delivery">Delivery</string>
    <string name="str_cart">Cart</string>
    <string name="str_netbanking">Net Banking</string>
    <string name="str_credit_card">Credit Card</string>
    <string name="str_EMI">EMI</string>
    <string name="str_debit_card">Debit Card</string>
    <string name="str_cash_on_delivery">Cash On Delivery</string>
    <string name="str_place_order">Place Order</string>
    <string name="str_select_payment">Select Payment</string>
    <string name="str_mm">MM</string>
    <string name="str_YYYY">YYYY</string>
    <string name="str_CCV">CCV</string>
    <string name="str_pay">Pay</string>
    <string name="str_credit_card_number">CreditCard Number</string>
    <string name="str_epiry_month">Expiry Month</string>
    <string name="str_epiry_year">Expiry Year</string>
    <string name="str_product_added_to_cart_successfully">Product added to cart successfully!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="str_reviews">Reviews</string>
    <string name="web_cliet_id">565672761492-8kotgjb4o1jd0epgiugdi9lp4ph57065.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1107786892591930</string>
    <string name="str_address_1">Address Line 1</string>
    <string name="str_address_2">Address Line 2</string>
    <string name="str_wedding_date">Wedding Date</string>
    <string name="str_gender">Gender</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_update_profile">Update Profile</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_select_gender">Select Gender</string>
    <string name="str_profile_updated_successfully">Profile updated successfully!</string>
    <string name="str_old_password">Old Password</string>
    <string name="str_Confirm_password">Confirm Password</string>
    <string name="str_old_pass_must_not">Old password must not be empty</string>
    <string name="str_new_pass_must_not">New password must not be empty</string>
    <string name="str_conf_pass_must_not">Confirm password must not be empty</string>
    <string name="str__new_confirm_pass_must_not">New and Confirm password are not matched.</string>
    <string name="str_specification">Specification</string>
    <string name="str_inquiry_message_must_not">Inquiry message must not be empty.</string>
    <string name="str_budget_must_not">Budget must not be empty.</string>
    <string name="str_msg">Message</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_submit_inquiry">Submit Inquiry</string>
    <string name="str_country">Country</string>
    <string name="str_state">State</string>
    <string name="str_city">City</string>
    <string name="str_zip">Pincode</string>
    <string name="str_please_select_state_first">Please select state first.</string>
    <string name="str_price_high_to_low">Price: High to Low</string>
    <string name="str_price_low_to_high">Price: Low to High</string>
    <string name="str_name_a_to_z">Name: A to Z</string>
    <string name="str_name_z_to_a">Name: Z to A</string>
    <string name="str_nickname">Nick Name</string>
    <string name="str_comment">Comment</string>
    <string name="str_writereview">Write Review</string>
    <string name="str_nick_name_must_not_be_empty">Nick Name must not be empty.</string>
    <string name="str_comment_must_not_be_empty">Comment must not be empty.</string>
    <string name="str_must_rate">Rating must not be zero.</string>
    <string name="str_comment_must_lenght">Comment must be more than 50 characters.</string>
    <string name="str_top_review">Top Review</string>
    <string name="str_recent_review">Recent Review</string>
    <string name="str_write_review_denied">Must purchase product to review it.</string>
    <string name="str_already_reviewed">You have already reviewed this product..</string>
    <string name="str_no_review_found">No Review Found!</string>
    <string name="str_your_cart_is_empty">Your cart is empty!</string>
    <string name="str_are_you_sure_remove_product">Are you sure you want to remove this product from cart?</string>
    <string name="str_cart_must_not_be_empty">Cart must not be empty to continue...</string>
    <string name="str_select_shipping_address">Select Shipping Address</string>
    <string name="str_change_address">Change Address</string>
    <string name="str_phone_must">Phone number must not be empty</string>
    <string name="str_address1_must">Address line 1 must not be empty</string>
    <string name="str_city_must">please select city</string>
    <string name="str_pin_must">PinCode must not be empty</string>
    <string name="str_pin_must_range">PinCode must be of 6 characters</string>
    <string name="str_phone_must_range">Phone must be of 10 to 14 characters</string>
    <string name="str_payment_completed">Payment Completed</string>
    <string name="str_Order_places">Order Placed</string>
    <string name="str_order_detail">Order Detail</string>
    <string name="str_order_date">Order Date</string>
    <string name="str_order_hash">Order#</string>
    <string name="str_blog">Inspire Yourself</string>
    <string name="str_pint">Pinterest</string>
    <string name="srt_verify_mobile_number">Verify Mobile Number</string>
    <string name="str_we_have_send_opt">We will send opt code to your mobile number.</string>
    <string name="inquiries">Inquiries</string>
    <string name="account">Account</string>
    <string name="str_weddings_simplified">Weddings Simplified</string>
    <string name="str_let_s_get_started">Let\'s get Started!</string>
    <string name="str_or">Or</string>
    <string name="str_login">LOG IN</string>
    <string name="str_terms_of_service"><u>Terms of service</u></string>
    <string name="str_and">and</string>
</resources>