<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:visible="false"
        android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_my_chat"
            android:title="@string/str_chat" />-->
        <item
            android:id="@+id/nav_my_odrers"
            android:title="@string/str_my_orders" />
        <item
            android:id="@+id/nav_inquiries"
            android:title="@string/inquiries" />
        <item
            android:id="@+id/nav_my_cart"
            android:title="@string/str_cart" />
        <item
            android:id="@+id/nav_blog"
            android:title="@string/str_blog" />
        <item
            android:id="@+id/nav_pintrest"
            android:title="@string/str_pint" />
        <item
            android:visible="false"
            android:id="@+id/nav_aboutus"
            android:title="@string/str_aboutus" />
        <item
            android:visible="false"
            android:id="@+id/nav_contactus"
            android:title="@string/str_contactus" />
        <item
            android:visible="false"
            android:id="@+id/nav_instant_booking"
            android:title="@string/str_instant_booking" />

        <item
            android:visible="false"
            android:id="@+id/nav_privacy_policy"
            android:title="@string/str_privacy_policy" />
        <item
            android:visible="false"
            android:id="@+id/nav_terms"
            android:title="@string/str_terms_of_use" />
        <item

            android:id="@+id/nav_account"
            android:title="@string/account" />
    </group>


       <!-- <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>-->


</menu>
