<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nectarbits.baraati.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_app_icon" />

                <com.nectarbits.baraati.View.TextViewKozukaGothicProH
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_17sdp"
                    android:textStyle="bold" />

                <com.nectarbits.baraati.View.TextViewKozukaGothicProL
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_weddings_simplified"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerVertical="true"
                android:background="@color/colorBlackOverImage"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingTop="@dimen/_10sdp">

                <com.nectarbits.baraati.View.TextViewKozukaGothicProH
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_let_s_get_started"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:clickable="true"
                        android:background="@drawable/selector_instagram"
                         />

                    <ImageView
                        android:id="@+id/btnFBLogin"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_17sdp"
                        android:clickable="true"
                        android:background="@drawable/selector_facebook"
                         />

                    <ImageView
                        android:id="@+id/btnGLogin"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_17sdp"
                        android:clickable="true"
                        android:background="@drawable/selector_google_plus" />
                </LinearLayout>

                <com.nectarbits.baraati.View.TextViewKozukaGothicProL
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/str_or"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:gravity="center">

                    <com.nectarbits.baraati.View.TextViewKozukaGothicProH
                        android:textAllCaps="true"
                       android:id="@+id/a_login_tv_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_button_rect"
                        android:padding="@dimen/_7sdp"
                        android:text="@string/str_sign_up"
                        android:textColor="@color/white" />
                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/button_facebook_login"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_17sdp"
                        android:visibility="gone"
                        android:src="@mipmap/ic_facebook" />
                    <com.nectarbits.baraati.View.TextViewKozukaGothicProH
                        android:id="@+id/a_login_tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_button_rect"
                        android:padding="@dimen/_7sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:text="@string/str_login"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.nectarbits.baraati.View.TextViewKozukaGothicProL
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="By continuing, you agree to our"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <com.nectarbits.baraati.View.TextViewKozukaGothicProH
                            android:id="@+id/txtterms"
                            android:clickable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_terms_of_service"
                            android:textColor="@color/selector_white_primary"
                            android:textSize="@dimen/_11sdp" />

                        <com.nectarbits.baraati.View.TextViewKozukaGothicProL
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:text="@string/str_and"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11sdp" />

                        <com.nectarbits.baraati.View.TextViewKozukaGothicProH
                            android:id="@+id/txtprivacy"
                            android:clickable="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_privacy_policy_u"
                            android:textColor="@color/selector_white_primary"
                            android:textSize="@dimen/_11sdp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
