<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nectarbits.baraati.LoginActivity">

    <ImageView
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <RelativeLayout
        android:orientation="vertical"

        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llBack"
            android:padding="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <ImageView
                android:id="@+id/btnBack"
                android:background="@drawable/selector_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
            <EditText
                android:padding="@dimen/_10sdp"
                android:text="+91"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:editable="false"
                android:gravity="center"

                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColorHint="@color/colorHintGray"
                android:background="@color/colorTransparent"
                android:textSize="@dimen/medium_Fonts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:id="@+id/txtPhoneNumber"
                android:gravity="center"
                android:hint="@string/str_phone_number"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/colorHintGray"
                android:background="@color/colorTransparent"
                android:textSize="@dimen/medium_Fonts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
       </LinearLayout>
            <View
                android:background="@color/colorWhiteTransparent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"/>



            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/str_we_have_send_opt"

                android:textColor="@color/colorHintGray"
                android:background="@color/colorTransparent"
                android:textSize="@dimen/small_Fonts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/btnNext"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:textSize="@dimen/medium_Fonts"
                android:textColor="@color/colorWhite"
                android:text="@string/str_next"
                android:background="@drawable/selector_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/medium_Fonts"
                    android:text="@string/str_already_have_an_account"
                    android:textColor="@color/selector_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/txtSignIn"
                    android:textStyle="bold"
                    android:padding="@dimen/_5sdp"
                    android:clickable="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/medium_Fonts"
                    android:text="@string/str_sign_in"
                    android:textColor="@color/selector_white_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/srt_verify_mobile_number"
            android:textSize="@dimen/large_Fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"

            android:layout_below="@+id/llBack"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>
