<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nectarbits.baraati.LoginActivity">

    <ImageView
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:orientation="vertical"

        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llBack"
            android:padding="@dimen/_7sdp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <ImageView
                android:id="@+id/btnBack"
                android:background="@drawable/selector_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
            android:textColor="@color/colorWhite"
            android:id="@+id/txtEmailAddress"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:imeOptions="actionDone"
            android:hint="@string/str_email_address"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorHintGray"
            android:background="@color/colorTransparent"
            android:textSize="@dimen/medium_Fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/colorWhiteTransparent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"/>




        <TextView
            android:clickable="true"
            android:id="@+id/btnSend"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:textSize="@dimen/medium_Fonts"
            android:textColor="@color/colorWhite"
            android:text="@string/str_send"
            android:background="@drawable/selector_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        </LinearLayout>

        <TextView
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/str_forgot_password"
            android:textSize="@dimen/large_Fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_below="@+id/llBack"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>
